- Reformat Analysis edit window to leave more room for description.  Moved analysis group to its own tab.
- Move filter widgets and refresh link to top panel in Analysis view.  
- Add ability to filter by multiple labs in Analysis view and ability to filter by analysis created in last week, month, 3 months, or year.


4.8.4 (July 25, 2010)
-------------------------
- Fix email body to work with Outlook 2007 and Gmail HTML renderers.
- Only warn about missing chartfields or blanking out chartfields on PO accounts for billing accounts just updated or added.

4.8.3 (July 21, 2010)
-------------------------
- Fixed bug where reselect on deactivated price caused blacked-out line. (Robb)
- Made change so cursor stays on “complete” after request has been moved from “complete” to “approved.” (Robb)
- Changed External Billing checkbox to Internal/External Pricing radio buttons. (Robb)
- Added PO checkbox to BillingAccounts items and blank out chartfields when checked.  
- Use PO flag on billing account to determine if billing shows under 'External PO' folder rather than using 'External' flag on Lab. (Robb)
- Warn when price, qty, or unit price is blank or 0;


4.8.2 (patch July 9, 2010)
-------------------------
- Fixed protocols links on experiments detail.  Bug was causing last protocol to always be shown.

4.8.2 (July 7, 2010)
-----------------------
- Fixed printable request form for Illumina HiSeq to show barcode (also other code that should test for both GAIIX and HiSeq like sample quality billing plug-in)
- Fixed billing summary report by lab to include HiSeq in Solexa totals.
- Work around unreachable orion dtd in datasources.xml by using dummy entity resolver in lucene BuildIndex java app
- Change Illumina Lib QC plug-in to only create billing item if lab prepped own library (seqPrepByCore=N)
- Bypass creating sample quality billing items and lib prep billing items on Illumina requests where the lab prepped its own library.

4.8.1 (Jul 6, 2010)