@@ -3,7 +3,7 @@
    body {
       font-family: Arial,Helvetica;
       font-size: 9pt;
-      width: 600;
+      width: 700;
       text-align: left;
       margin-left: 1;
    }
