@@ -86,6 +86,13 @@
 			}
 			callLater(parentDocument.samplesView.checkSamplesCompleteness);
 		}
+		
+		 public function propagatePrepInstructions():void {
+			for each (var sample:Object in parentDocument.samples) {
+				sample.@prepInstructions = this.prepInstructions.text;
+			}
+			callLater(parentDocument.samplesView.checkSamplesCompleteness);
+		}
        	public function propagateNumberSequencingCycles():void {
 			for each (var sample:Object in parentDocument.samples) {
 				if (this.numberSequencingCyclesRadioGroup.selectedValue != null) {
@@ -292,9 +299,13 @@
 						</mx:HBox>
 				</mx:VBox>
 			</mx:HBox>
-			<mx:HBox id="numberOfCyclesContainer1" width="100%" horizontalGap="0" height="100%" paddingRight="5" paddingBottom="5">
-				<mx:Label text="(4) Provide any special analysis instructions." width="314"  id="label12"/>
-				<mx:TextArea id="analysisInstructions" width="100%" focusOut="this.propagateAnalysisInstructions()" maxChars="2000" height="100"/>
+			<mx:HBox id="coreInstructionsBox" width="100%" horizontalGap="0" height="100%" paddingRight="5" paddingBottom="5">
+				<mx:Text text="{'(4) Provide any special instructions (libraray prep, etc.) for the ' + parentApplication.getProperty(parentApplication.PROPERTY_CORE_FACILITY_NAME) + '.'}" width="314"  id="label12"/>
+				<mx:TextArea id="prepInstructions" width="100%" focusOut="this.propagatePrepInstructions()" maxChars="2000" height="100%"/>
+			</mx:HBox>
+			<mx:HBox id="analysisInstructionsBox" width="100%" horizontalGap="0" height="100%" paddingRight="5" paddingBottom="5">
+				<mx:Text text="(5) Provide any special analysis instructions for bionformatics." width="314" />
+				<mx:TextArea id="analysisInstructions" width="100%" focusOut="this.propagateAnalysisInstructions()" maxChars="2000" height="100%"/>
 			</mx:HBox>
 		
 	</mx:VBox>
