@@ -1228,6 +1228,7 @@ CREATE TABLE `gnomex`.`Sample` (
   `seqPrepStockDate` DATETIME NULL,
   `seqPrepStockFailed` CHAR(1) NULL,
   `seqPrepStockBypassed` CHAR(1) NULL,
+  `prepInstructions` VARCHAR(2000) NULL,
   PRIMARY KEY (`idSample`),
   CONSTRAINT `FK_Sample_Organism` FOREIGN KEY `FK_Sample_Organism` (`idOrganism`)
     REFERENCES `gnomex`.`Organism` (`idOrganism`)
